# iouring-getdents

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  init
src/: fs.rs  main.rs
