[package]
name = "traverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["fs", "rt", "sync"] }
tokio-uring = { version = "0.4.0", optional = true }

[patch.crates-io]
tokio-uring = { path = "./tokio-uring" }
io-uring = { path = "./io-uring" }

[features]
io-uring = ["tokio-uring"]

[[bin]]
name = "traverse"
path = "src/main.rs"
